@@ -18,6 +18,7 @@ import java.nio.file.Path;
 import java.nio.file.PathMatcher;
 import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
+import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.nio.file.attribute.FileTime;
 import java.util.ArrayList;
@@ -39,6 +40,7 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentSkipListSet;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.BiConsumer;
@@ -90,6 +92,7 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
     volatile Throwable compileProblem;
     volatile Throwable testCompileProblem;
     volatile Throwable hotReloadProblem;
+    private final AtomicReference<Throwable> deploymentProblem;
 
     private volatile Predicate<ClassInfo> disableInstrumentationForClassPredicate = new AlwaysFalsePredicate<>();
     private volatile Predicate<Index> disableInstrumentationForIndexPredicate = new AlwaysFalsePredicate<>();
@@ -103,6 +106,7 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
     final Map<Path, Long> sourceFileTimestamps = new ConcurrentHashMap<>();
 
     private final List<Runnable> preScanSteps = new CopyOnWriteArrayList<>();
+    private final List<Runnable> postRestartSteps = new CopyOnWriteArrayList<>();
     private final List<Consumer<Set<String>>> noRestartChangesConsumers = new CopyOnWriteArrayList<>();
     private final List<HotReplacementSetup> hotReplacementSetup = new ArrayList<>();
     private final List<Runnable> deploymentFailedStartHandlers = new ArrayList<>();
@@ -139,7 +143,7 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
             DevModeType devModeType, BiConsumer<Set<String>, ClassScanResult> restartCallback,
             BiConsumer<DevModeContext.ModuleInfo, String> copyResourceNotification,
             BiFunction<String, byte[], byte[]> classTransformers,
-            TestSupport testSupport) {
+            TestSupport testSupport, AtomicReference<Throwable> deploymentProblem) {
         this.applicationRoot = applicationRoot;
         this.context = context;
         this.compiler = compiler;
@@ -178,6 +182,7 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
                 }
             });
         }
+        this.deploymentProblem = deploymentProblem;
     }
 
     public TestSupport getTestSupport() {
@@ -185,12 +190,13 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
     }
 
     @Override
-    public Path getClassesDir() {
-        //TODO: fix all these
-        for (DevModeContext.ModuleInfo i : context.getAllModules()) {
-            return Paths.get(i.getMain().getClassesPath());
+    public List<Path> getClassesDir() {
+        final List<ModuleInfo> allModules = context.getAllModules();
+        final List<Path> paths = new ArrayList<>(allModules.size());
+        for (DevModeContext.ModuleInfo i : allModules) {
+            paths.add(Path.of(i.getMain().getClassesPath()));
         }
-        return null;
+        return paths;
     }
 
     @Override
@@ -243,13 +249,17 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
                             periodicTestCompile();
                         }
                     };
+                    // monitor .env as it can impact test execution
+                    testClassChangeWatcher.watchFiles(Path.of(context.getApplicationRoot().getProjectDirectory()),
+                            List.of(Path.of(".env")),
+                            callback);
                     Set<Path> nonExistent = new HashSet<>();
                     for (DevModeContext.ModuleInfo module : context.getAllModules()) {
                         for (Path path : module.getMain().getSourcePaths()) {
-                            testClassChangeWatcher.watchPath(path.toFile(), callback);
+                            testClassChangeWatcher.watchDirectoryRecursively(path, callback);
                         }
                         for (Path path : module.getMain().getResourcePaths()) {
-                            testClassChangeWatcher.watchPath(path.toFile(), callback);
+                            testClassChangeWatcher.watchDirectoryRecursively(path, callback);
                         }
                     }
                     for (DevModeContext.ModuleInfo module : context.getAllModules()) {
@@ -258,14 +268,14 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
                                 if (!Files.isDirectory(path)) {
                                     nonExistent.add(path);
                                 } else {
-                                    testClassChangeWatcher.watchPath(path.toFile(), callback);
+                                    testClassChangeWatcher.watchDirectoryRecursively(path, callback);
                                 }
                             }
                             for (Path path : module.getTest().get().getResourcePaths()) {
                                 if (!Files.isDirectory(path)) {
                                     nonExistent.add(path);
                                 } else {
-                                    testClassChangeWatcher.watchPath(path.toFile(), callback);
+                                    testClassChangeWatcher.watchDirectoryRecursively(path, callback);
                                 }
                             }
                         }
@@ -281,7 +291,7 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
                                         Path i = iterator.next();
                                         if (Files.isDirectory(i)) {
                                             iterator.remove();
-                                            testClassChangeWatcher.watchPath(i.toFile(), callback);
+                                            testClassChangeWatcher.watchDirectoryRecursively(i, callback);
                                             added = true;
                                         }
 
@@ -389,14 +399,18 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
     public Throwable getDeploymentProblem() {
         //we differentiate between these internally, however for the error reporting they are the same
         return compileProblem != null ? compileProblem
-                : IsolatedDevModeMain.deploymentProblem != null ? IsolatedDevModeMain.deploymentProblem
+                : deploymentProblem.get() != null ? deploymentProblem.get()
                         : hotReloadProblem;
     }
 
     @Override
     public void setRemoteProblem(Throwable throwable) {
         compileProblem = throwable;
-        getCompileOutput().setMessage(throwable.getMessage());
+        if (throwable == null) {
+            getCompileOutput().setMessage(null);
+        } else {
+            getCompileOutput().setMessage(throwable.getMessage());
+        }
     }
 
     private StatusLine getCompileOutput() {
@@ -528,7 +542,7 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
             //all broken we just assume the reason that they have refreshed is because they have fixed something
             //trying to watch all resource files is complex and this is likely a good enough solution for what is already an edge case
             boolean restartNeeded = !instrumentationChange && (changedClassResults.isChanged()
-                    || (IsolatedDevModeMain.deploymentProblem != null && userInitiated) || fileRestartNeeded);
+                    || (deploymentProblem.get() != null && userInitiated) || fileRestartNeeded);
             if (restartNeeded) {
                 String changeString = changedFilesForRestart.stream().map(Path::getFileName).map(Object::toString)
                         .collect(Collectors.joining(", "));
@@ -541,6 +555,13 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
                 restartCallback.accept(filesChanged, changedClassResults);
                 long timeNanoSeconds = System.nanoTime() - startNanoseconds;
                 log.infof("Live reload total time: %ss ", Timing.convertToBigDecimalSeconds(timeNanoSeconds));
+                for (Runnable step : postRestartSteps) {
+                    try {
+                        step.run();
+                    } catch (Throwable t) {
+                        log.error("Post Restart step failed", t);
+                    }
+                }
                 if (TimeUnit.SECONDS.convert(timeNanoSeconds, TimeUnit.NANOSECONDS) >= 4 && !instrumentationEnabled()) {
                     if (!instrumentationLogPrinted) {
                         instrumentationLogPrinted = true;
@@ -552,9 +573,7 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
                 return true;
             } else if (!filesChanged.isEmpty()) {
                 try {
-                    for (Consumer<Set<String>> consumer : noRestartChangesConsumers) {
-                        consumer.accept(filesChanged);
-                    }
+                    notifyExtensions(filesChanged);
                     hotReloadProblem = null;
                     getCompileOutput().setMessage(null);
                 } catch (Throwable t) {
@@ -576,11 +595,40 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
         }
     }
 
+    /**
+     * This notifies registered extensions of "no-restart" changed files.
+     *
+     * @param noRestartChangedFiles the Set of changed files
+     */
+    public void notifyExtensions(Set<String> noRestartChangedFiles) {
+        if (lastStartIndex == null) {
+            // we don't notify extensions if the application never started
+            return;
+        }
+        scanLock.lock();
+        codeGenLock.lock();
+        try {
+
+            for (Consumer<Set<String>> consumer : noRestartChangesConsumers) {
+                consumer.accept(noRestartChangedFiles);
+            }
+        } finally {
+            scanLock.unlock();
+            codeGenLock.unlock();
+        }
+
+    }
+
     public boolean instrumentationEnabled() {
         if (instrumentationEnabled != null) {
             return instrumentationEnabled;
         }
         return configuredInstrumentationEnabled;
+    }
+
+    public RuntimeUpdatesProcessor setLiveReloadEnabled(boolean liveReloadEnabled) {
+        this.liveReloadEnabled = liveReloadEnabled;
+        return this;
     }
 
     public RuntimeUpdatesProcessor setConfiguredInstrumentationEnabled(boolean configuredInstrumentationEnabled) {
@@ -591,6 +639,11 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
     @Override
     public void addPreScanStep(Runnable runnable) {
         preScanSteps.add(runnable);
+    }
+
+    @Override
+    public void addPostRestartStep(Runnable runnable) {
+        postRestartSteps.add(runnable);
     }
 
     @Override
@@ -923,11 +976,14 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
                                 try {
                                     Path relative = root.relativize(path);
                                     Path target = outputDir.resolve(relative);
+
                                     seen.remove(target);
                                     if (!timestampSet.watchedPaths.containsKey(path)) {
                                         moduleResources.add(target);
-                                        if (!Files.exists(target) || Files.getLastModifiedTime(target).toMillis() < Files
-                                                .getLastModifiedTime(path).toMillis()) {
+
+                                        long current = Files.getLastModifiedTime(path).toMillis();
+
+                                        if (!Files.exists(target) || Files.getLastModifiedTime(target).toMillis() < current) {
                                             if (Files.isDirectory(path)) {
                                                 Files.createDirectories(target);
                                             } else {
@@ -935,10 +991,9 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
                                                 // A new file is added to a resource root
                                                 // We need to use the OS-agnostic path to match the HotDeploymentWatchedFileBuildItem
                                                 ret.add(toOSAgnosticPathStr(relative.toString()));
-                                                byte[] data = Files.readAllBytes(path);
-                                                try (FileOutputStream out = new FileOutputStream(target.toFile())) {
-                                                    out.write(data);
-                                                }
+                                                Files.copy(path, target, StandardCopyOption.REPLACE_EXISTING,
+                                                        StandardCopyOption.COPY_ATTRIBUTES);
+
                                                 if (copyResourceNotification != null) {
                                                     copyResourceNotification.accept(module, relative.toString());
                                                 }
@@ -954,11 +1009,15 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
                     for (Path i : seen) {
                         moduleResources.remove(i);
                         if (!Files.isDirectory(i)) {
-                            Files.delete(i);
+                            try {
+                                Files.delete(i);
+                            } catch (IOException e) {
+                                log.error("Failed to delete resources", e);
+                            }
                         }
                     }
                 } catch (IOException e) {
-                    log.error("Failed to copy resources", e);
+                    log.error("Unable to walk through the directory", e);
                 }
             }
 
@@ -975,6 +1034,7 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
                     try {
                         long current = Files.getLastModifiedTime(watchedPath.filePath).toMillis();
                         long last = watchedPath.lastModified;
+
                         if (current > last) {
                             // Use either the absolute path or the OS-agnostic path to match the HotDeploymentWatchedFileBuildItem
                             ret.add(isAbsolute ? watchedPath.filePath.toString() : watchedPath.getOSAgnosticMatchPath());
@@ -1156,11 +1216,32 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
                     // Then process glob patterns
                     for (Entry<String, Boolean> e : watchedFilePaths.entrySet()) {
                         String watchedFilePath = e.getKey();
-                        Path path = Paths.get(watchedFilePath);
-                        if (!path.isAbsolute() && !watchedRootPaths.contains(e.getKey()) && maybeGlobPattern(watchedFilePath)) {
-                            Path resolvedPath = root.resolve(watchedFilePath);
-                            for (WatchedPath extra : expandGlobPattern(root, resolvedPath, watchedFilePath, e.getValue())) {
-                                timestamps.watchedPaths.put(extra.filePath, extra);
+                        Path path = Paths.get(sanitizedPattern(watchedFilePath));
+                        if (!path.isAbsolute() && !watchedRootPaths.contains(e.getKey())
+                                && maybeGlobPattern(watchedFilePath)) {
+                            try {
+                                final PathMatcher matcher = FileSystems.getDefault().getPathMatcher("glob:" + watchedFilePath);
+                                Files.walkFileTree(root, new SimpleFileVisitor<Path>() {
+                                    @Override
+                                    public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) {
+                                        Path relativePath = root.relativize(file);
+                                        if (matcher.matches(relativePath)) {
+                                            log.debugf("Glob pattern [%s] matched %s from %s", watchedFilePath, relativePath,
+                                                    root);
+                                            WatchedPath extra = new WatchedPath(file, relativePath, e.getValue(),
+                                                    attrs.lastModifiedTime().toMillis());
+                                            timestamps.watchedPaths.put(extra.filePath, extra);
+                                        }
+                                        return FileVisitResult.CONTINUE;
+                                    }
+
+                                    @Override
+                                    public FileVisitResult visitFileFailed(Path file, IOException exc) {
+                                        return FileVisitResult.CONTINUE;
+                                    }
+                                });
+                            } catch (IOException ex) {
+                                throw new UncheckedIOException(ex);
                             }
                         }
                     }
@@ -1171,8 +1252,9 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
         // Finally process watched absolute paths
         for (Entry<String, Boolean> e : watchedFilePaths.entrySet()) {
             String watchedFilePath = e.getKey();
-            Path path = Paths.get(watchedFilePath);
+            Path path = Paths.get(sanitizedPattern(watchedFilePath));
             if (path.isAbsolute()) {
+                path = Paths.get(watchedFilePath);
                 log.debugf("Watch %s", path);
                 if (Files.exists(path)) {
                     putLastModifiedTime(path, path, e.getValue(), timestamps);
@@ -1185,6 +1267,10 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
 
         log.debugf("Watched paths: %s", timestamps.watchedPaths.values());
         return this;
+    }
+
+    private String sanitizedPattern(String pattern) {
+        return pattern.replaceAll("[*?]", "");
     }
 
     private boolean maybeGlobPattern(String path) {
@@ -1232,32 +1318,6 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
         if (testClassChangeTimer != null) {
             testClassChangeTimer.cancel();
         }
-    }
-
-    private List<WatchedPath> expandGlobPattern(Path root, Path path, String pattern, boolean restart) {
-        PathMatcher pathMatcher = FileSystems.getDefault().getPathMatcher("glob:" + path.toString());
-        List<WatchedPath> files = new ArrayList<>();
-        try {
-            Files.walkFileTree(root, new SimpleFileVisitor<Path>() {
-                @Override
-                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) {
-                    if (pathMatcher.matches(file)) {
-                        Path relativePath = root.relativize(file);
-                        log.debugf("Glob pattern [%s] matched %s from %s", pattern, relativePath, root);
-                        files.add(new WatchedPath(file, relativePath, restart, attrs.lastModifiedTime().toMillis()));
-                    }
-                    return FileVisitResult.CONTINUE;
-                }
-
-                @Override
-                public FileVisitResult visitFileFailed(Path file, IOException exc) {
-                    return FileVisitResult.CONTINUE;
-                }
-            });
-        } catch (IOException e) {
-            throw new UncheckedIOException(e);
-        }
-        return files;
     }
 
     public boolean toggleInstrumentation() {
@@ -1359,7 +1419,8 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
 
         @Override
         public String toString() {
-            return "WatchedPath [matchPath=" + matchPath + ", filePath=" + filePath + ",  restartNeeded=" + restartNeeded + "]";
+            return "WatchedPath [matchPath=" + matchPath + ", filePath=" + filePath + ", restartNeeded=" + restartNeeded
+                    + ", lastModified=" + lastModified + "]";
         }
 
     }
